--- a/mplayer.html
+++ b/mplayer.html
@@ -126,7 +126,7 @@ $('.btn .icon-pre').onclick = function(){
 function getMusicList(callback){
     
     var xhr = new XMLHttpRequest();
-    xhr.open('get','/desktop/musicplayer/music.json',true)
+    xhr.open('get','/music.json',true)
     xhr.onload = function (){
         if(xhr.status >= 200 || xhr.status < 300 && xhr.status == 304){
             callback(JSON.parse(xhr.responseText))
