--- a/mplayer.html
+++ b/mplayer.html
@@ -15,7 +15,7 @@
             <!---音乐播放器-->
             <div class="firstbar">
                 <div class="pic">
-                    <img src="http://cloud.hunger-valley.com/17-9-22/28212907.jpg" alt="">
+                    <img src="https://cloud.hunger-valley.com/17-9-22/28212907.jpg" alt="">
                 </div>
             </div>  
             <div class="secondbar">
